# ssc

./: .gitignore  BUILD.bazel  LTPlius.sty  Makefile  README.md  VUMIFPSbakalaurinis.cls  WORKSPACE  bibliografija.bib  references.md
code/: Expression.scala  IR.scala  Import.scala  Number.scala  caseclass.scala  lazylist.scala
pdf/: BUILD.bazel  darbas.tex  planas.tex
pdf/chapters/: introduction.tex
specs2/: BUILD  SampleTest.scala
src/: BUILD  ByteClassLoader.java  ByteStream.scala  Class.scala  ClassFile.scala  ClassFileApp.scala  ClassFileSpec.scala  ClassSpec.scala  CodeAttribute.scala  CodeAttributeApp.scala  CodeSpec.scala  Compiler.scala  CompilerSpec.scala  Jar.scala  Lexer.scala  LexerApp.scala  LexerSpec.scala  LexerTest.scala  Materializer.scala  Parser.scala  ParserSpec.scala  PrettyPrint.scala  Scala.scala  ScalaApp.scala  ScalaSpec.scala  Span.scala  Util.scala  Version.scala  type.scala
src/benchmark/: BUILD  Makefile  benchmark.rb  plot.tex  plot2.rb  plot_pct.tex  results.json  simple.rb  table.rb  table.tex  table2.tex
src/skylark/: BUILD  Skylark.scala  SkylarkApp.scala
