load("@bazel_latex//:latex.bzl", "latex_document")

latex_document(
    name = "pdf",
    srcs = glob([
        "chapters/*.tex",
    ]) + [
        "@bazel_latex//packages:biblatex",
        #texmf/texmf-dist/tex/latex/polyglossia
        "@texlive_texmf__texmf-dist__tex__latex__polyglossia",
        #texmf/texmf-dist/fonts/misc/xetex/fontmapping/polyglossia
        "@texlive_texmf__texmf-dist__fonts__misc__xetex__fontmapping__polyglossia",
        "references.bib",
        "//:sources",
    ],
    cmd_flags = ["--bibtex-cmd=biber"],
    main = "darbas.tex",
)

# texmf/texmf-dist/tex/generic/ifxetex
# "@texlive_texmf__texmf-dist__tex__generic__ifxetex",
# "@texmf/texmf-dist/tex/latex/polyglossia
# "@texlive_texmf__texmf-dist__tex__latex__polyglossia",

